# payroll-normalizer-mcp

./: LICENSE  README.md  pyproject.toml
src/payroll_normalizer_mcp/: __init__.py  core.py  server.py
